# cpp_project_in_github

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE.md  README.md  main.cpp  run_coverage.sh
.github/ISSUE_TEMPLATE/: feature_request.md  issue-report.md
.github/workflows/: cmake_arm.yml  cmake_x64.yml  codeql-analysis.yml  coverage.yml
calculator/: CMakeLists.txt  calculator.cpp  calculator.h
cmakes/: compile_option.cmake
test/: CMakeLists.txt
test/calculator/: CMakeLists.txt  test_calculator.cpp
test/main/: test_main.cpp
